# vus.course1sem

./: CMakeLists.txt
practics1234/: 2D_arrays.cpp  2d_arrays.h  arrays.cpp  arrays.h  strings.cpp  strings.h  types.h
