cmake_minimum_required(VERSION 3.23)
project(practics)

set(CMAKE_CXX_STANDARD 14)

add_executable(practics main.cpp practics1234/types.h practics1234/p.types.cpp practics1234/arrays.h practics1234/arrays.cpp practics1234/2d_arrays.h practics1234/2D_arrays.cpp practics1234/strings.h practics1234/strings.cpp)
